# TasksMultiServer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.api  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: CI_CD_SETUP_SUMMARY.md  CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  code-quality.yml  integration-tests.yml.example  security.yml
docs/: DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  README.md
docs/api/: mcp-tools.md  rest-endpoints.md
docs/architecture/: data-models.md  dependency-analysis.md
docs/examples/: bulk-operations.md  dependency-workflows.md  search-filtering.md  tag-management.md
docs/guides/: agent-best-practices.md  troubleshooting.md
k8s/: README.md  api-configmap.yaml  api-deployment.yaml  api-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml  resource-quota.yaml  ui-configmap.yaml  ui-deployment.yaml  ui-service.yaml
refreshui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
refreshui/src/: App.tsx  index.css
refreshui/src/api/: client.ts
refreshui/src/components/: ActionMenu.module.css  ActionMenu.tsx  ActionPlanItem.module.css  ActionPlanItem.tsx  CreateProjectModal.module.css  CreateProjectModal.tsx  CreateTaskListModal.module.css  CreateTaskListModal.tsx  CreateTaskModal.module.css  CreateTaskModal.tsx  Customizations.module.css  Customizations.tsx  CustomizationsModal.module.css  CustomizationsModal.tsx  DependencySection.module.css  DependencySection.tsx  ExitCriteriaItem.module.css  ExitCriteriaItem.tsx  Fab.module.css  Fab.tsx  FilterPopover.module.css  FilterPopover.tsx  NoteItem.module.css  NoteItem.tsx  PrioritySelector.module.css  PrioritySelector.tsx  ProjectFilterPopover.tsx  ProjectView.module.css  ProjectView.tsx  ReadyTasksCount.module.css  ReadyTasksCount.tsx  SearchFilterToolbar.module.css  SearchFilterToolbar.tsx  SegmentedProgressBar.module.css  SegmentedProgressBar.tsx  SmallTaskCard.module.css  SmallTaskCard.tsx  StatsPanel.module.css  StatsPanel.tsx  StatusIndicator.module.css  (+15 more)
refreshui/src/context/: DataServiceContext.test.tsx  DataServiceContext.tsx  ThemeContext.tsx  ToastContext.tsx  index.ts
refreshui/src/hooks/: useTilt.ts
refreshui/src/layouts/: index.ts
refreshui/src/pages/: Dashboard.module.css  Dashboard.tsx  DesignSystemPage.tsx  ProjectsPage.tsx  ShowcasePage.tsx  TasksPage.tsx
refreshui/src/services/: factory.test.ts  factory.ts  index.ts  types.ts
refreshui/src/styles/: hover-effects.css  theme.css  themes.ts  tokens.css
refreshui/src/utils/: filtering.ts  grouping.ts  index.ts  readyTasks.ts  sorting.ts  statistics.ts
refreshui/src/views/: .gitkeep  index.ts
scripts/: build.py  build.sh  k8s-port-forward.sh  run_integration_tests.sh  sync_version.py  test_docker_deployment.sh  validate_ci_setup.py  validate_docker_config.sh
src/task_manager/: __init__.py
src/task_manager/data/: __init__.py  config.py
src/task_manager/formatting/: __init__.py  error_formatter.py  error_templates.py
src/task_manager/health/: __init__.py  health_check_service.py
src/task_manager/interfaces/: __init__.py
src/task_manager/models/: __init__.py  entities.py  enums.py
src/task_manager/orchestration/: __init__.py  blocking_detector.py  bulk_operations_handler.py  dependency_analyzer.py  dependency_orchestrator.py  project_orchestrator.py  search_orchestrator.py  tag_orchestrator.py  (+3 more)
tests/: __init__.py  conftest.py  test_setup.py
tests/e2e/: README.md  test_ui_workflows.py
tests/integration/: README.md  SETUP.md  __init__.py  test_blocking_detection_integration.py  test_filesystem_store_integration.py  test_mcp_server_integration.py  test_mcp_tag_tools.py  test_postgresql_store_integration.py  test_project_orchestrator_integration.py  test_rest_api_with_postgresql.py  test_rest_bulk_operations.py  test_rest_dependency_endpoints.py  test_rest_error_formatter_integration.py  test_rest_error_handling.py  test_rest_preprocessing_integration.py  test_rest_search_endpoint.py  test_rest_server_additional_coverage.py  test_rest_server_health_and_edge_cases.py  test_rest_server_integration.py  test_rest_tag_endpoints.py  test_task_endpoints.py
tests/unit/: test_action_plan_order_preservation_properties.py  test_ascii_visualization_properties.py  test_backing_store_initialization_properties.py  test_blocked_task_block_reason_properties.py  test_blocking_detector.py  test_blocking_detector_properties.py  test_boolean_string_preprocessing_properties.py  test_bottleneck_properties.py  test_bulk_create_properties.py  test_bulk_delete_properties.py  test_bulk_operations_handler_edge_cases.py  test_bulk_partial_failure_properties.py  test_bulk_tag_properties.py  test_bulk_update_properties.py  test_bulk_validate_before_apply_properties.py  test_cascade_deletion_properties.py  test_circular_dependency_detection_properties.py  test_config.py  test_critical_path_properties.py  test_dependency_acceptance_properties.py  test_dependency_analyzer.py  test_dependency_analyzer_circular_detection_properties.py  test_dependency_orchestrator.py  test_direct_store_access_properties.py  test_dot_format_properties.py  test_entities.py  test_entity_persistence_properties.py  test_enums.py  test_exit_criteria_completion_enforcement_properties.py  test_filesystem_store.py  test_filesystem_store_crud.py  test_json_string_preprocessing_properties.py  test_leaf_task_identification_properties.py  test_mcp_error_handling.py  test_mcp_preprocessing_integration.py  test_mcp_server.py  test_mcp_server_additional_coverage.py  test_mcp_server_coverage_improvement.py  test_mcp_server_handlers.py  test_mcp_server_main.py  (+42 more)
ui/: .dockerignore  Dockerfile  ERROR_HANDLING.md  README.md  nginx.conf  package-lock.json  package.json
ui/src/: App.tsx
(+255 files in other folders)
