[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tasks-multiserver"
version = "0.2.0"
description = "Multi-interface task management system with MCP, REST API, and React UI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "TasksMultiServer Team"}
]
keywords = ["task-management", "mcp", "rest-api", "productivity", "multi-interface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.92.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pylint>=3.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pip-audit>=2.6.0",
    "pre-commit>=3.5.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
tasks-multiserver = "task_manager.interfaces.mcp.server:main"

[project.entry-points."mcp.servers"]
tasks-multiserver = "task_manager.interfaces.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
    "--cov-branch",
    "--strict-markers",
    "--ignore=tests/e2e",
    "-v"
]
asyncio_mode = "auto"
markers = [
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')"
]

[tool.hypothesis]
deadline = 500

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Branch coverage threshold
[tool.coverage.html]

[tool.coverage.paths]
source = ["src/"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
check_untyped_defs = false
strict_equality = false
exclude = ["build", "dist", ".venv", "venv", "tests"]
ignore_errors = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",  # invalid-name
    "C0111",  # missing-docstring
    "C0301",  # line-too-long (handled by black)
    "C0302",  # too-many-lines
    "C0415",  # import-outside-toplevel
    "R0801",  # duplicate-code
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "R0911",  # too-many-return-statements
    "R0912",  # too-many-branches
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "R0917",  # too-many-positional-arguments
    "R1705",  # no-else-return
    "W0107",  # unnecessary-pass
    "W0603",  # global-statement
    "W0611",  # unused-import
    "W0613",  # unused-argument
    "W0621",  # redefined-outer-name
    "W0707",  # raise-missing-from
    "W0718",  # broad-exception-caught
    "W1203",  # logging-fstring-interpolation
    "W1309",  # f-string-without-interpolation
    "W1514",  # unspecified-encoding
]
